# h42fw

./: CMakeLists.txt  Makefile  README.md  pico_sdk_import.cmake
script/: avg-latency  convert-frames  convert-png
src/: cfg.c  cfg.h  config.h  main.c  main.h  oled.c  oled.h  usb_descriptors.c  xinput.c  xinput.h
src/font/: font5x7.h
